# thought-injector-experiment

./: .gitattributes  .gitignore  AGENTS.md  DESIGN.md  Justfile  LOG.md  README.md  download.py  injection_output.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml
experiments/: README.md
experiments/honesty/: layer18_strength0p35_seed0.txt  layer18_strength0p40_seed0.txt  layer20_strength0p20_seed0.txt  layer20_strength0p35_seed0_nonorm.txt  layer20_strength0p60_seed0.txt  layer20_strength0p70_seed0_contrast.txt  layer22_strength0p58_seed7.txt  layer22_strength0p60_seed0.txt  layer22_strength0p65_seed7.txt  layer23_strength0p55_seed7.txt  results.md  sweep_seed7_layer22.csv
experiments/llama-3.1-8b-instruct/agency/: baseline_layer20_strength0_seed0.txt  baseline_layer20_strength0_temp0p3_seed0.txt  injection_layer12_strength1p10_seed0.txt  injection_layer20_strength0p60_seed0.txt  injection_layer20_strength0p80_seed0.txt  injection_layer20_strength1p50_seed0.txt  injection_layer20_strength2p00_seed0.txt  injection_layer20_strength2p50_seed0.txt  injection_layer24_strength1p00_seed0.txt  injection_pairs_layer20_strength0p80_temp0p3_seed0.txt  injection_pairs_layer20_strength1p00_temp0p7_seed0.txt  injection_pairs_layer20_strength5p00_seed0.txt  injection_pairs_pre_bread_strength1p00_seed0.txt  injection_pairs_question_only_strength1p00_seed0.txt  injection_wordvec_layer20_strength0p60_seed0.txt  injection_wordvec_layer20_strength0p80_seed0.txt  injection_wordvec_layer20_strength1p00_seed0.txt  results.md
experiments/llama-3.1-8b-instruct/readme_windowed/: injection_aquariums_layer20_strength0p8.txt
experiments/llama-3.1-8b-instruct/warm/: baseline_layer20_seed0.txt  layer16_token-1_strength0p40_nowindow_seed0.txt  layer18_strength0p40_seed0.txt  layer20_strength0p30_seed0.txt  layer20_strength0p31_seed0.txt  layer20_strength0p33_seed0.txt  layer20_strength0p34_seed0.txt  layer20_strength0p36_seed0.txt  layer20_strength0p40_generatedonly_seed0.txt  layer20_strength0p50_seed0.txt  layer20_strength0p70_seed0.txt  layer20_token-1_strength0p25_nowindow_seed0.txt  layer20_token-1_strength0p32_nowindow_seed0.txt  layer20_token-1_strength0p35_temp0p7_seed0.txt  layer20_token-1_strength0p37_nowindow_seed0.txt  layer20_token-1_strength0p40_nowindow_seed0.txt  layer20_token-1_strength0p40_seed0.txt  layer20_token-1_strength0p40_temp0p3_seed0.txt  layer20_token-1_strength0p40_temp0p3_tokens40_seed0.txt  layer20_token-1_strength0p40_temp0p3_tokens80_seed0.txt  layer20_token-1_strength0p40_temp0p3_tokens80_yesno_seed0.txt  (+9 more)
experiments/loud/: baseline_layer20_seed0.txt  layer16_strength0p50ptxt  layer16_strength0p90ptxt  layer20_strength0p20ptxt  layer20_strength0p30ptxt  layer20_strength1p20ptxt  layer24_strength0p50ptxt  results.md
experiments/readme_windowed/: injection_aquariums_layer20_strength0p8.txt
prompts/: README.md
prompts/examples/: loud_vs_soft.jsonl
prompts/templates/: agency_test_llama.txt  injected_thought.txt  injected_thought_descriptive.txt  injected_thought_yesno.txt
src/thought_injector/: __init__.py  app.py  baseline.py  cli.py  injection.py  models.py  pairs.py  spans.py  text_utils.py  vectors.py
sweeps/: llama31_bread_prefill_layer20to24.csv  llama31_bread_prefill_layers26to31.csv  llama31_bread_prefill_layers2to8.csv  llama31_bread_prefill_layers8to20.csv  llama31_bread_wordvec_layers8to20.csv
tests/: test_cli_capture_pairs.py  test_cli_capture_word.py  test_cli_helpers.py  test_generated_only_behavior.py  test_injection.py  test_injection_schedule.py  test_match_spans.py  test_models.py  test_vectors.py  test_window_spec_mixed.py
(+57 files in other folders)
