[project]
name = "thought-injector"
version = "0.1.0"
description = "Local concept injection experiments for transformer LMs"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Experimental Agent" }]
dependencies = [
  "click>=8.1.8,<8.4",
  "huggingface-hub>=0.36.0,<2.0",
  "pydantic>=2.12.4,<3.0",
  "rich>=14.2.0,<15.0",
  "safetensors>=0.6.2,<0.8",
  "torch>=2.9.1,<3.0",
  "transformers>=4.57.1,<5.0",
  "typer>=0.20.0,<0.21",
]

[project.scripts]
thought-injector = "thought_injector.cli:app"

[dependency-groups]
dev = [
  "basedpyright>=1.33.0,<2.0",
  "pip-audit>=2.9.0,<3.0",
  "pytest>=9.0.1,<10.0",
  "ruff>=0.14.4,<0.15",
]

[tool.basedpyright]
include = ["src"]
strict = ["src"]  # paths to apply strict rules
reportMissingImports = true
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = [
  "^models/.*",  # ignore downloaded HF models
]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
extend-exclude = ["models", "vectors", "__pycache__"]
# enforce modern Python
lint.select = [
  "E",
  "F",
  "W",  # flake8 core
  "I",  # import sorting (isort)
  "UP",  # pyupgrade
  "N",  # pep8-naming
  "B",  # bugbear
  "C4",  # comprehensions
  "SIM",  # simplify
  "RUF",  # ruff-specific improvements
]
lint.ignore = [
  "E501",  # line length handled by formatter
]

[tool.uv]
package = true
